# ai-text-detection

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
notebooks/: eda.ipynb  pyproject.toml
scripts/: get-perplexity.py  get_embeddings.py  get_perplexity.py
src/: config.py  server.py  utils.py
src/templates/: index.html
